简历/4.18/3.md

## 基本信息

- 个人信息：`陈世松` | 男 ｜ 1994年
- 学历信息：成都理工大学 | 全日制`本科`｜ 通信工程
- 工作经验：前端开发 `3年+ (2017.2至今)`
- 期望职位：`前端工程师(中高级)` | 成都 | 全职 | 薪资面议
- 联系方式：`15608003358`(微信号同该手机号) | `448216252@qq.com`

## 掌握技能

- 熟练使用 `JavaScript(ES6+)`，熟悉 `JavaScript` 面向对象及函数式编程，能够运用设计模式写出结构良好的现代代码。
- 熟练使用 `Vue` 全家桶及相关生态，对其原理有一定深入的了解，知道大部分功能的实现方式。
- 熟悉 `小程序` 开发及小程序相关优化，熟悉 `uni-app`、`chameleon` 等小程序多端方案。
- 熟悉 `webpack`，对前端工程化、模块化有一定的理解，有一定改良公司内部脚手架的经验。
- 熟悉 `dart`，能够使用 `Flutter` 进行跨终端开发。
- 熟悉 `React` 及相关生态和部分功能原理，能够使用其进行业务开发。

## 工作经历

### 成都虎魄网络科技有限公司(2018.9至今｜增长组前端负责人)

- 主要业务：亲子在线旅游平台，涉及游玩、剧场、酒店、餐饮等场景。

- 看新机会原因：疫情原因，公司做一些业务和项目上的调整，与职业规划不符。

#### 前端基础建设

1. 企业内部 npm 依赖库(2019.6)

- 技术架构：`nexus` 作为包管理平台，`Monorepo` 项目管理模式，`lerna` 作为包管理工具，`@pika/pack` 作为打包工具，`npm域` 控制私有包的拉取和上传

- 根据业务和技术积累，依赖库主要分成三大类：
  1. 核心库(@hupo/core): 核心工具方法，包含小程序框架核心依赖、常用方法、通信层封装、多端多态协议封装，代码质量得到提升。<https://github.com/ChenXiaoSong12321/hupo-core>
  2. 组件库(@hupo/ui): 商城项目内部UI库，集中化管理，迭代效率得到优化，UI设计的规范化得到显著提升。<https://github.com/ChenXiaoSong12321/hupo-ui>
  3. 编译库(@hupo/compile): 覆盖编译类工具方法，通过配置全局命令实现快速创建基础项目，拉取接口资源等功能，大幅度提高开发人员工作效率。

2. 多页面高性能脚手架(2018.10)

- 主要特点：`多项目/多页面`，可快速启动一个活动页 H5 项目；充分利用 `cdn资源`，首次加载速度和二次加载速度得到极大提升；可 `快速部署` 项目，优化开发流程。
- Github：<https://github.com/ChenXiaoSong12321/vue-multiplePages-useCdn>

3. 多端UI组件库(2018.12)

- 主要贡献：协助并结合设计师的UI组件规范，实现了内部小程序组件库大部分组件，后迁移至chameleon和uni-app多端框架。

<div class="third" style="display:flex;">
  <img src="https://mall-admin.hupovip.cn/hp-mall-admin/v1/comm/resource/view?token=850e62043c4e4d4795a31f35b834e490&path=/resource/images/businessmen/152019_0615d8c3-5c95-462b-a8aa-ff0f30c09258.JPG" style="width:130px;margin-right:5px;"/>
  <img src="https://mall-admin.hupovip.cn/hp-mall-admin/v1/comm/resource/view?token=850e62043c4e4d4795a31f35b834e490&path=/resource/images/businessmen/152013_444ad079-9df7-4888-a42c-08b1fe88dbdb.JPG" style="width:130px;margin-right:5px;"/>
  <img src="https://mall-admin.hupovip.cn/hp-mall-admin/v1/comm/resource/view?token=850e62043c4e4d4795a31f35b834e490&path=/resource/images/businessmen/152006_6842b5a7-ea18-4b98-aa6e-ecdf17f15735.JPG"
   style="width:130px;margin-right:5px;"/>
  <img src="https://mall-admin.hupovip.cn/hp-mall-admin/v1/comm/resource/view?token=850e62043c4e4d4795a31f35b834e490&path=/resource/images/businessmen/152016_c3d3550c-0675-493d-8231-580f513acba1.JPG"
   style="width:130px;"/>
</div>

- Github：<https://github.com/ChenXiaoSong12321/hupo-ui>

#### 主要涉及项目

- 琥珀亲子小程序(gulp+原生 -> chameleon -> uni-app)
   1. 梳理和持续优化维护线上系统，完成各项需求的前端落地和优化。
   2. 基于 `多端框架` 的部分架构设计和业务(2.0->3.0)迁移，完成相关的依赖库、组件库的开发。
- 琥珀亲子后台管理系统(Vue + Element)
   1. 基于选型框架并根据项目需求调整和框架优化，解决标签页缓存等技术难点。
   2. 实现并利用 `dispatch` / `broadcast` 增强Vue的通信方式，优化表单验证。
   3. 利用 `$attrs` / `$listeners` 对Elememnt部分组件进行二次封装，提升开发效率。
- 商家端
   1. 基于H5完成1.0商家端的业务开发，完成日历统计等核心功能。
   2. 基于 `Flutter` 完成商家端跨终端(IOS/Android)开发。
- 相关 `H5` 营销活动项目的快速开发上线。
- 制定并持续优化 `代码规范`、`Git提交规范`、`版本号规范` 等团队规范化建设。
- 基于 `Vue` + `Vuepress` 完成文档系统的搭建和模版设计。

### 成都拼机惠科技有限公司(2018年3月 ~ 2018年8月)

- 主要业务：在线大型机械器件零部件商城。

#### 主要涉及项目

1. 拼机惠商城后台管理系统(Vue + Element)
   1. 利用 `Vue` + `Element-UI` 完成基本项目搭建
   2. 利用 `axios` + `tiny-graphql-client` 对通信层进行封装，友好的与 `GraphQL` 进行接口对接。
2. 拼机惠商城小程序(原生)
   1. 完成商城小程序基本架构的搭建，实现请求、登录、支付等核心模块的封装。
   2. 引入 `regenerator-runtime` 对 `async/await` 进行支持，微信api`promise化`，增加了异步代码可读性。

### 成都世纪顶点科技有限公司(2017年2月 ~ 2018年2月)

- 主要业务：网络安全相关系统。

#### 主要涉及项目

1. 顶点 IPSec VPN 安全网关系统(perl + JavaScript + jQuery + ECharts)
   1. 使用 `JavaScript(ES5)` 面向对象编程，开发了列表详情等核心模块，提升新增页面时的效率。
   2. 通过 `gulp` 构建，引入 `ES6+` 与 `sass`，对系统部分复杂业务的界面进行模块拆分重构，异步代码采用 `Promise化`，实现模块化，代码复用性和可维护性得到提升。
   3. 利用 `perl` 进行作为中间件进行前后端联调，开发上传、下载、数据传输等功能。
   4. 利用 `jQuery` 及 `ECharts`，实现基本系统页面效果与交互、数据可视化等功能。
